# django-store-kit-cli

./: pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
dsk/: __main__.py  cli.py  console.py  executables.py
dsk/helpers/: context_managers.py  text.py
