[tool.poetry]
name = "django-store-kit-cli"
version = "0.1.0"
description = "Django store kit cli is a command line interace that accompanies the django-store-kit package, which has one goal - to collect common utilites useful for personal django projects"
authors = ["Daniel Kjellid <daniel@kjellid.no>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dsk"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.12.1"
rich = "^13.6.0"
rich-click = "^1.7.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
deptry = "^0.12.0"
ruff = "^0.1.8"

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
strict = true

[tool.deptry]
extend_exclude = [".*tests.*"]

[tool.deptry.per_rule_ignores]
# Installed, but not explicitly imported
DEP002 = [
    "rich",
    "rich-click",
    "click"
]